Updating timetable on about.html, updating css rules on about.css and add temporary icon favicon.ico :D

--- a/about.html
+++ b/about.html
@@ -11,12 +11,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
+    <!-- ICON -->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>About Us!</title>
-
-    <!-- <div class="container">
-      <h1>ABOUT US</h1>
-      <div class="about-text"></div> -->
-    </div>
   </head>
   <body class="about-body">
     <section>
@@ -199,10 +196,57 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <h1>Our Timetable !</h1>
+        <div class="timetable">
+          <table border="1" cellspacing="0">
+            <tr>
+              <th colspan="6">Weekly Time Table</th>
+            </tr>
+            <tr>
+              <th rowspan="6">Hours</th>
+              <th>Monday</th>
+              <th>Tuesday</th>
+              <th>Wednesday</th>
+              <th>Thursday</th>
+              <th>Friday</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Introduction to Programming - Lecture</td>
+              <td>Networks and Switching - Lab</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Computing Technology Inquiry Project - Lecture</td>
+              <td></td>
+              <td></td>
+              <td>Introduction To Programming - Lab</td>
+              <td>Networks and Switching - Lecture</td>
+            </tr>
+            <tr>
+              <th colspan="5">Break</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Computing Technology Inquiry Project - Lab</td>
+              <td>Computer Systems - Lab</td>
+              <td></td>
+              <td>Computing Technology Inquiry Project - Workshop</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>Introduction to Programming - Workshop</td>
+              <td>Computer Systems - Lecture</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
   </body>
 
-  <footer>
-    Made By Simon Nguyen@2023
-  </footer>
+  <footer>Made By Simon Nguyen@2023</footer>
 </html>
