--- a/job.html
+++ b/job.html
@@ -6,120 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="draft.css"> -->
     <title>Job Description</title>
+    <link rel="stylesheet" href="./styles/job.css">
 </head>
-<style>
-    * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    padding: 3;
-    margin: 3;
-    box-sizing: border-box;
-  }
 
-
-/* the whole content */
-  body {
-    /* margin: 1em 2em 1em 2em; */
-    margin: auto;
-    word-wrap: break-word;
-    line-height: 1.25em;
-    font-size: 1em;
-    width: 80vw;
-    text-align: left;
-  }
-
-
-/* relating to design n layout of boxes */
-  /* adding margin for each section (each jobs' descriptions) */
-  section {
-    margin: 2em 0 0 0;
-  }
-  /* sections with contents placing in boxes, namely the tables and some descriptions for the jobs */
-  dl, table, tr, td {
-    border: 0.5px solid rgb(51, 74, 75);
-    border-collapse: collapse;
-  }
-  /* small index and their content (beneath the job title) */
-  dl {
-    border-radius: 5px;
-    padding: 0.5em 1em 0.5em 1em;
-    width: fit-content;
-  }
-
-  
-/* relating to text - the actual content */
-  /* the title "Job description" */
-  h1 {
-    font-size: 3em;
-    color: black;
-  }
-  /* job title */
-  section h2 {
-    font-size: 1.75em;
-    color: rgb(100,125,209);
-  }
-  /* indexes */
-  dt, h2, h3, h4 {
-    color: rgb(51, 51, 51);
-  }
-  /* big indexes (h3 only) */
-  h3 {
-    font-size: 1.5em;
-  } 
-  /* smaller indexes (h4) */
-  h4 {
-    font-size: 1.25em;
-  }
-  /* indexes inside bordered boxes (dt) */
-  dt {
-    margin: 0.5em 0 0.125em 0;
-  }
-  /* content of every indexes */
-  p, li, td, dd {
-    color: rgb(51, 74, 75);
-  }
-  /* text inside tables */
-  td {
-    padding: 0.5em 1em 0.5em 1em;
-  }
-  /* paragraph indentation */
-  p {
-    text-indent: 2em;
-  }
-  /* in-text citation - linking to the reference section */
-  sup {
-    font-size: 0.5em;
-    font-weight: bold;
-  }
-
-
-
-/* the horizontal rule aka the thematic break (hr) */
-  hr {
-    border-bottom: 0.5px solid rgb(100, 125, 126);
-    width: 80%;
-    margin: 2em 0em 0em 0em;
-  }
-
-
-/* links */
-  a:link {
-    color: rgb(100, 125, 126);
-    text-decoration: none;
-  }
-  a:visited {
-    color: rgb(80, 103, 176);
-    text-decoration: none;
-  }
-  a:hover {
-    color: rgb(117, 143, 230);
-    text-decoration: underline;
-  }
-  a:active {
-    color: rgb(51, 51, 51);
-    text-decoration: underline;
-  }
-</style>
 <body>
     <header>
         <p>=D header</p>
