add favicon and changed design

--- a/apply.html
+++ b/apply.html
@@ -5,16 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Apply for our open positions">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <title>Apply - CloudLabs</title>
 </head>
 
 <body>
   <main>
-    <h1>Apply for your dream job</h1>
-    <h3 class="unbold">
+
+    <h1>Apply for your dream job</h1>      
+    
+    <h2 class="unbold">
       Fill out the form below to apply for one of our open positions!
-    </h3>
+    </h2>
     <br>
     <!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
     <form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
