--- a/about.html
+++ b/about.html
@@ -1,252 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head class="about-head">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS -->
     <link rel="stylesheet" href="./styles/about.css" />
-    <!-- AWESOME FONTS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <!-- ICON -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <title>About Us!</title>
+    <title>About Us</title>
   </head>
-  <body class="about-body">
-    <section>
-      <div class="row">
-        <h1>Our Members!</h1>
+  <body>
+    <div class="container">
+      <h1>About Our Lovely Team !</h1>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry's standard dummy text ever
+        since the 1500s, when an unknown printer took a galley of type and
+        scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+      <h1></h1>
+      <div class="group-info">
+        <dl>
+          <dt>Group Name</dt>
+          <dd>Deadline Is Coming</dd>
+        </dl>
+        <dl>
+          <dt>Group ID</dt>
+          <dd>FYM69</dd>
+        </dl>
+        <dl>
+          <dt>Tutor's Name</dt>
+          <dd>Grace Tao Dep Trai</dd>
+        </dl>
+        <dl>
+          <dt>Course</dt>
+          <dd>Computing Technology Inquiry Project</dd>
+        </dl>
       </div>
-      <div class="row">
-        <!-- COL 1 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- COL 2 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- COL 3 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- COL 4 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- COL 5 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- COL 6 -->
-        <div class="column">
-          <div class="card">
-            <div class="image-container">
-              <img
-                src="./images/messi.png"
-                alt="member one"
-                width="140"
-                height="128"
-              />
-            </div>
-            <h3>Messi Crying</h3>
-            <p>Captain</p>
-            <div class="icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-discord"></i>
-              </a>
-            </div>
-          </div>
-        </div>
+      <div class="card">
+        <img src="./images/messi.png" alt="Member 1" />
+        <h3>Member 1</h3>
+        <p>Role: Front-end Developer</p>
       </div>
-      <div class="row">
-        <h1>Our Timetable !</h1>
-        <div class="timetable">
-          <table border="1" cellspacing="0">
+      <div class="card">
+        <img src="./images/messi.png" alt="Member 2" />
+        <h3>Member 2</h3>
+        <p>Role: Back-end Developer</p>
+      </div>
+      <div class="card">
+        <img src="./images/messi.png" alt="Member 3" />
+        <h3>Member 3</h3>
+        <p>Role: Full-stack Developer</p>
+      </div>
+      <div class="card">
+        <img src="./images/messi.png" alt="Member 4" />
+        <h3>Member 4</h3>
+        <p>Role: UI/UX Designer</p>
+      </div>
+      <div class="card">
+        <img src="./images/messi.png" alt="Member 5" />
+        <h3>Member 5</h3>
+        <p>Role: Project Manager</p>
+      </div>
+      <div class="timetable">
+        <h2>Timetable</h2>
+        <table>
+          <thead>
             <tr>
-              <th colspan="6">Weekly Time Table</th>
+              <th>Day</th>
+              <th>Time</th>
+              <th>Class</th>
             </tr>
+          </thead>
+          <tbody>
             <tr>
-              <th rowspan="6">Hours</th>
-              <th>Monday</th>
-              <th>Tuesday</th>
-              <th>Wednesday</th>
-              <th>Thursday</th>
-              <th>Friday</th>
-            </tr>
-            <tr>
-              <td></td>
-              <td>Introduction to Programming - Lecture</td>
-              <td>Networks and Switching - Lab</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
+              <td>Monday</td>
+              <td>12:30pm - 1:30pm</td>
               <td>Computing Technology Inquiry Project - Lecture</td>
-              <td></td>
-              <td></td>
-              <td>Introduction To Programming - Lab</td>
+            </tr>
+            <tr>
+              <td>Tuesday</td>
+              <td>8:30am - 10:30am</td>
+              <td>Introduction To Programming - Lecture</td>
+            </tr>
+            <tr>
+              <td>Tuesday</td>
+              <td>3:30pm - 4:30pm</td>
+              <td>Computing Technology Inquiry Project - Lab</td>
+            </tr>
+            <tr>
+              <td>Wednesday</td>
+              <td>8:30am - 11:30am</td>
+              <td>Networks and Switching - Lab</td>
+            </tr>
+            <tr>
+              <td>Wednesday</td>
+              <td>2:30pm - 4:30pm</td>
+              <td>Computer Systems - Lab</td>
+            </tr>
+            <tr>
+              <td>Thursday</td>
+              <td>10:30am - 12:30pm</td>
+              <td>Introduction to Programming - Lab</td>
+            </tr>
+            <tr>
+              <td>Friday</td>
+              <td>10:30am - 12:30pm</td>
               <td>Networks and Switching - Lecture</td>
             </tr>
             <tr>
-              <th colspan="5">Break</th>
-            </tr>
-            <tr>
-              <td></td>
-              <td>Computing Technology Inquiry Project - Lab</td>
-              <td>Computer Systems - Lab</td>
-              <td></td>
+              <td>Friday</td>
+              <td>2:30pm - 4:30pm</td>
               <td>Computing Technology Inquiry Project - Workshop</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>Introduction to Programming - Workshop</td>
+              <td>Friday</td>
+              <td>4:30pm - 5:30pm</td>
               <td>Computer Systems - Lecture</td>
             </tr>
-          </table>
-        </div>
+          </tbody>
+        </table>
       </div>
-    </section>
+      <div class="mail">
+        <p>Want to get in touch with us ?</p>
+        <a href="mailto:abcdxyz@concac.com">Contact Us</a>
+      </div>
+    </div>
   </body>
-
-  <footer>Made By Simon Nguyen@2023</footer>
 </html>
