--- a/about.html
+++ b/about.html
@@ -5,130 +5,184 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/about.css" />
+    <link rel="stylesheet" href="styles/header_footer.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>About Us</title>
   </head>
   <body>
-    <div class="container">
-      <h1>About Our Lovely Team !</h1>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release
-        of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
-      </p>
-      <h1></h1>
-      <div class="group-info">
-        <dl>
-          <dt>Group Name</dt>
-          <dd>Deadline Is Coming</dd>
-        </dl>
-        <dl>
-          <dt>Group ID</dt>
-          <dd>FYM69</dd>
-        </dl>
-        <dl>
-          <dt>Tutor's Name</dt>
-          <dd>Grace Tao Dep Trai</dd>
-        </dl>
-        <dl>
-          <dt>Course</dt>
-          <dd>Computing Technology Inquiry Project</dd>
-        </dl>
+    <header>
+      <nav id="header">
+        <div class="logo">
+          <p>logo</p>
+        </div>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#jobs">Jobs</a></li>
+          <li><a href="#news">Apply</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="container">
+        <h1>About Our Lovely Team !</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged. It was popularised in the 1960s with
+          the release of Letraset sheets containing Lorem Ipsum passages, and
+          more recently with desktop publishing software like Aldus PageMaker
+          including versions of Lorem Ipsum.
+        </p>
+        <h1></h1>
+        <div class="group-info">
+          <dl>
+            <dt>Group Name</dt>
+            <dd>Deadline Is Coming</dd>
+          </dl>
+          <dl>
+            <dt>Group ID</dt>
+            <dd>FYM69</dd>
+          </dl>
+          <dl>
+            <dt>Tutor's Name</dt>
+            <dd>Grace Tao Dep Trai</dd>
+          </dl>
+          <dl>
+            <dt>Course</dt>
+            <dd>Computing Technology Inquiry Project</dd>
+          </dl>
+        </div>
+        <div class="card">
+          <img src="./images/messi.png" alt="Member 1" />
+          <h3>Member 1</h3>
+          <p>Role: Front-end Developer</p>
+        </div>
+        <div class="card">
+          <img src="./images/messi.png" alt="Member 2" />
+          <h3>Member 2</h3>
+          <p>Role: Back-end Developer</p>
+        </div>
+        <div class="card">
+          <img src="./images/messi.png" alt="Member 3" />
+          <h3>Member 3</h3>
+          <p>Role: Full-stack Developer</p>
+        </div>
+        <div class="card">
+          <img src="./images/messi.png" alt="Member 4" />
+          <h3>Member 4</h3>
+          <p>Role: UI/UX Designer</p>
+        </div>
+        <div class="card">
+          <img src="./images/messi.png" alt="Member 5" />
+          <h3>Member 5</h3>
+          <p>Role: Project Manager</p>
+        </div>
+        <div class="timetable">
+          <h2>Timetable</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Class</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Monday</td>
+                <td>12:30pm - 1:30pm</td>
+                <td>Computing Technology Inquiry Project - Lecture</td>
+              </tr>
+              <tr>
+                <td>Tuesday</td>
+                <td>8:30am - 10:30am</td>
+                <td>Introduction To Programming - Lecture</td>
+              </tr>
+              <tr>
+                <td>Tuesday</td>
+                <td>3:30pm - 4:30pm</td>
+                <td>Computing Technology Inquiry Project - Lab</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>8:30am - 11:30am</td>
+                <td>Networks and Switching - Lab</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>2:30pm - 4:30pm</td>
+                <td>Computer Systems - Lab</td>
+              </tr>
+              <tr>
+                <td>Thursday</td>
+                <td>10:30am - 12:30pm</td>
+                <td>Introduction to Programming - Lab</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>10:30am - 12:30pm</td>
+                <td>Networks and Switching - Lecture</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>2:30pm - 4:30pm</td>
+                <td>Computing Technology Inquiry Project - Workshop</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:30pm - 5:30pm</td>
+                <td>Computer Systems - Lecture</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="mail">
+          <p>Want to get in touch with us ?</p>
+          <a href="mailto:abcdxyz@concac.com">Contact Us</a>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/messi.png" alt="Member 1" />
-        <h3>Member 1</h3>
-        <p>Role: Front-end Developer</p>
+    </main>
+    <footer>
+      <div class="row">
+        <div class="col">
+          <img src="logo.png" class="logo" alt="LOGO" />
+          <p>
+            Our company provides details of "Chief Technology Officer(CTO)" and
+            "Cloud engineering", including base position, skills needed,
+            qualification and salary average per year in Australia.
+          </p>
+        </div>
+
+        <div class="col">
+          <h3>Officer</h3>
+          <p class="email-id">email : 104082552@student.swin.edu.au</p>
+          <p>phone number : +61 423032755</p>
+        </div>
+
+        <div class="col">
+          <h3>Links</h3>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#jobs">Jobs</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#Links">Link reference</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <h3>Newsletter</h3>
+          <form>
+            <input type="email" placeholder="Enter Your email id" required />
+            <input type="submit" />
+          </form>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/messi.png" alt="Member 2" />
-        <h3>Member 2</h3>
-        <p>Role: Back-end Developer</p>
-      </div>
-      <div class="card">
-        <img src="./images/messi.png" alt="Member 3" />
-        <h3>Member 3</h3>
-        <p>Role: Full-stack Developer</p>
-      </div>
-      <div class="card">
-        <img src="./images/messi.png" alt="Member 4" />
-        <h3>Member 4</h3>
-        <p>Role: UI/UX Designer</p>
-      </div>
-      <div class="card">
-        <img src="./images/messi.png" alt="Member 5" />
-        <h3>Member 5</h3>
-        <p>Role: Project Manager</p>
-      </div>
-      <div class="timetable">
-        <h2>Timetable</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Day</th>
-              <th>Time</th>
-              <th>Class</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Monday</td>
-              <td>12:30pm - 1:30pm</td>
-              <td>Computing Technology Inquiry Project - Lecture</td>
-            </tr>
-            <tr>
-              <td>Tuesday</td>
-              <td>8:30am - 10:30am</td>
-              <td>Introduction To Programming - Lecture</td>
-            </tr>
-            <tr>
-              <td>Tuesday</td>
-              <td>3:30pm - 4:30pm</td>
-              <td>Computing Technology Inquiry Project - Lab</td>
-            </tr>
-            <tr>
-              <td>Wednesday</td>
-              <td>8:30am - 11:30am</td>
-              <td>Networks and Switching - Lab</td>
-            </tr>
-            <tr>
-              <td>Wednesday</td>
-              <td>2:30pm - 4:30pm</td>
-              <td>Computer Systems - Lab</td>
-            </tr>
-            <tr>
-              <td>Thursday</td>
-              <td>10:30am - 12:30pm</td>
-              <td>Introduction to Programming - Lab</td>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>10:30am - 12:30pm</td>
-              <td>Networks and Switching - Lecture</td>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>2:30pm - 4:30pm</td>
-              <td>Computing Technology Inquiry Project - Workshop</td>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>4:30pm - 5:30pm</td>
-              <td>Computer Systems - Lecture</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="mail">
-        <p>Want to get in touch with us ?</p>
-        <a href="mailto:abcdxyz@concac.com">Contact Us</a>
-      </div>
-    </div>
+      <hr />
+      <p>Deadline is coming 2023 &copy - All Rights Reserved</p>
+    </footer>
   </body>
 </html>
