--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="review-box">
         <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" />
+          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
           <p class="review-wording">
             One of the worst public toilets I have encountered.Would the council
             go bust if they got some bleach and mopped it once a day at least.
@@ -68,7 +68,7 @@
 
       <div class="review-box">
         <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" />
+          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
           <p class="review-wording">
             One of the worst public toilets I have encountered.Would the council
             go bust if they got some bleach and mopped it once a day at least.
@@ -78,7 +78,7 @@
 
       <div class="review-box">
         <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" />
+          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
           <p class="review-wording">
             One of the worst public toilets I have encountered.Would the council
             go bust if they got some bleach and mopped it once a day at least.
@@ -88,7 +88,7 @@
 
       <div class="review-box">
         <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" />
+          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
           <p class="review-wording">
             One of the worst public toilets I have encountered.Would the council
             go bust if they got some bleach and mopped it once a day at least.
