--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
           <p>logo</p>
         </div>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#jobs">Jobs</a></li>
-          <li><a href="#news">Apply</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./job.html">Jobs</a></li>
+          <li><a href="./apply.html">Apply</a></li>
+          <li><a href="./about.html">About</a></li>
         </ul>
       </nav>
     </header>
