Finished merging all CSSs to one fucking file and put all seperate CSS and HTML files to backup folder for someone who needed hehe

--- a/job.html
+++ b/job.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="job-class">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="draft.css"> -->
     <title>Job Description</title>
-    <link rel="stylesheet" href="./styles/job.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
 
-<body>
+<body id="job-body">
     <header>
         <p>=D header</p>
     </header>
-    <main>
+    <main id="job-main">
         <h1>Job Description</h1>
         <hr>
         <h2>Table of Content</h2>
