--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Apply to our open positions" />
-    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <title>CloudLabs</title>
   </head>
   <body>
-    <header class="header">
+    <header class="index-header">
       <h1>The header will be up here</h1>
       <br /><br />
     </header>
-    <main>
+    <main class="index-main">
       <h1>This is CloudLabs</h1>
 
       <h2>
