add typing effect to about.html and apply.html

--- a/about.html
+++ b/about.html
@@ -24,7 +24,11 @@
     </header>
     <main>
       <div class="about-container">
-        <h1 class="about-h1">About Our Lovely Team !</h1>
+        <div class="header-container">
+          <div class="about-typed-out">
+        <h1 class="about-h1">About our lovely team</h1>
+          </div>
+      </div>
         <p class="about-p">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
