--- a/apply.html
+++ b/apply.html
@@ -24,7 +24,11 @@
       </nav>
     </header>
     <main class="apply-container">
+      <div class="header-container">
+      <div class="apply-typed-out">
       <h1 class="apply-h1">Apply for your dream job</h1>
+    </div>
+  </div>
       <h2 class="apply-h2">
         Fill out the form below to apply for one of our open positions!
       </h2>
