add typing effect to job.html

--- a/job.html
+++ b/job.html
@@ -9,13 +9,26 @@
     <link rel="stylesheet" href="./styles/main.css">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
-
-<body id="job-body">
+<body>
     <header>
-        <p>=D header</p>
-    </header>
+        <nav id="header-nav">
+          <div class="logo">
+            <p>logo</p>
+          </div>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./job.html">Jobs</a></li>
+            <li><a href="./apply.html">Apply</a></li>
+            <li><a href="./about.html">About</a></li>
+          </ul>
+        </nav>
+      </header>
     <main id="job-main">
-        <h1>Job Description</h1>
+        <div class="header-container">
+            <div class="job-typed-out">
+        <h1 class="job-h1">Our open positions</h1>
+    </div>
+</div>
         <hr>
         <h2>Table of Content</h2>
         <ol>
