--- a/job.html
+++ b/job.html
@@ -26,10 +26,10 @@
     <main id="job-main">
         <div class="header-container">
             <div class="job-typed-out">
-        <h1 class="job-h1">Our open positions</h1>
+        <h1>Our open positions</h1>
     </div>
 </div>
-        <hr>
+    <hr>
         <h2>Table of Content</h2>
         <ol>
             <!-- đổi hết draft html to job html -->
