--- a/apply.html
+++ b/apply.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="apply-class">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -25,10 +25,10 @@
     </header>
     <main class="apply-container">
       <div class="header-container">
-      <div class="apply-typed-out">
-      <h1 class="apply-h1">Apply for your dream job</h1>
+        <div class="apply-typed-out">
+          <h1 class="apply-h1">Apply for your dream job</h1>
+        </div>
       </div>
-  </div>
       <h2 class="apply-h2">
         Fill out the form below to apply for one of our open positions!
       </h2>
