--- a/job.html
+++ b/job.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
-<body>
+<body id>
     <header>
         <nav id="header-nav">
           <div class="logo">
