--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Apply to our open positions" />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <title>CloudLabs</title>
+  </head>
+
+  <body>
     <header>
       <nav id="header-nav">
         <div class="logo">
@@ -19,8 +23,6 @@
         </ul>
       </nav>
     </header>
-  </head>
-  <body>
     <main class="index-main">
       <h1>This is CloudLabs</h1>
 
@@ -105,7 +107,7 @@
         </div>
       </div>
     </main>
-    
+
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
