Adding icon and change css file name

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>About Us</title>
   </head>
@@ -26,9 +26,9 @@
       <div class="about-container">
         <div class="header-container">
           <div class="about-typed-out">
-        <h1 class="about-h1">About our lovely team</h1>
+            <h1 class="about-h1">About our lovely team</h1>
           </div>
-      </div>
+        </div>
         <p class="about-p">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
