--- a/job.html
+++ b/job.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="draft.css"> -->
     <title>Job Description</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
-<body id>
+<body>
     <header>
         <nav id="header-nav">
           <div class="logo">
@@ -36,7 +37,7 @@
             <li><a href="job.html#cto">Chief Technology Officer</a></li>
             <li><a href="job.html#cloud_en">Cloud Engineer</a></li>
         </ol>
-        
+
         <section>
             <h2 id="cto">Chief Technology Officer</h2>
             <dl>
@@ -49,7 +50,7 @@
             </dl>
             <h3>Brief Description</h3>
             <p>
-                A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="job.html#cite">[5]</a></sup> 
+                A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="job.html#cite">[5]</a></sup>
                 They ensure that the technical improvements go in line with the company&#39;s target and that the technological resources are used for the right intention &#8211; for technological development. <sup><a href="job.html#cite">[4]</a></sup>
             </p>
             <h3>Key Responsibilities</h3>
@@ -126,7 +127,7 @@
             </dl>
             <h3>Brief Description</h3>
             <p>
-                A Cloud Engineer needs to create, run, and maintain a cloud infrastructure. 
+                A Cloud Engineer needs to create, run, and maintain a cloud infrastructure.
                 This includes sticking to the best performance of the environment and ensuring network security. <sup><a href="job.html#cite">[2]</a></sup>
             </p>
             <h3>Key Responsibilities <sup><a href="job.html#cite">[6]</a></sup></h3>
@@ -215,13 +216,13 @@
               qualification and salary average per year in Australia.
             </p>
           </div>
-  
+
           <div class="footer-col">
             <h3>Officer</h3>
             <p class="footer-email-id">Email : 104082552@student.swin.edu.au</p>
             <p>Phone number : +61 423032755</p>
           </div>
-  
+
           <div class="footer-col">
             <h3>Links</h3>
             <ul>
