--- a/apply.html
+++ b/apply.html
@@ -2,10 +2,10 @@
 <html lang="en" class="apply-class">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Apply for our open positions" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <title>Apply - CloudLabs</title>
   </head>
 
