Fix typing animation + make apply.html consistent

--- a/apply.html
+++ b/apply.html
@@ -39,7 +39,7 @@
         action="https://mercury.swin.edu.au/it000000/formtest.php"
       >
         <fieldset class="apply-section">
-          <legend>📝 About the job</legend>
+          <legend>About the job</legend>
           <label class="apply-label" for="job_ref_no"
             >Which job are you applying for?</label
           ><br />
@@ -56,7 +56,7 @@
         </fieldset>
 
         <fieldset class="apply-section">
-          <legend>👋 Tell us about yourself</legend>
+          <legend>Tell us about yourself</legend>
           <table class="apply-table">
             <tr>
               <td class="apply-td">
@@ -225,7 +225,7 @@
         </fieldset>
 
         <fieldset class="apply-section">
-          <legend>🤔 Tell us about your skills</legend>
+          <legend>Tell us about your skills</legend>
           <input
             class="apply-input"
             type="checkbox"
