change skills to match with jobs page

--- a/apply.html
+++ b/apply.html
@@ -231,42 +231,58 @@
             type="checkbox"
             id="skill1"
             name="skills[]"
-            value="leadership"
+            value="Communication"
             required
           />
-          <label class="apply-label" for="skill1">Leadership</label><br />
+          <label class="apply-label" for="skill1">Communication</label><br />
           <input
             class="apply-input"
             type="checkbox"
             id="skill2"
             name="skills[]"
-            value="communication"
+            value="teamwork"
           />
-          <label class="apply-label" for="skill2">Communication</label><br />
+          <label class="apply-label" for="skill2">Teamwork</label><br />
           <input
             class="apply-input"
             type="checkbox"
             id="skill3"
             name="skills[]"
-            value="decision_making"
+            value="detail_oriented"
           />
-          <label class="apply-label" for="skill3">Decision making</label><br />
+          <label class="apply-label" for="skill3">Detail-oriented</label><br />
           <input
             class="apply-input"
             type="checkbox"
             id="skill4"
             name="skills[]"
-            value="management"
+            value="initiative"
           />
-          <label class="apply-label" for="skill4">Management</label><br />
+          <label class="apply-label" for="skill4">Initiative</label><br />
           <input
             class="apply-input"
             type="checkbox"
             id="skill5"
             name="skills[]"
+            value="time_management"
+          />
+          <label class="apply-label" for="skill5">Time management</label><br />
+          <input
+          class="apply-input"
+          type="checkbox"
+          id="skill6"
+          name="skills[]"
+          value="risk_management"
+        />
+        <label class="apply-label" for="skill6">Risk management</label><br />
+          <input
+            class="apply-input"
+            type="checkbox"
+            id="skill7"
+            name="skills[]"
             value="other"
           />
-          <label class="apply-label" for="skill5">Other skills...</label
+          <label class="apply-label" for="skill7">Other skills...</label
           ><br /><br />
 
           <label class="apply-label" for="other_skills">Other skills</label
