--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <title>About Us</title>
+    <title>About Us - CloudLabs</title>
   </head>
   <body id="about-body">
     <header>
