--- a/job.html
+++ b/job.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="draft.css"> -->
-    <title>Job Description</title>
+    <title>Jobs - CloudLabs</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
