update enhancements page

--- a/enhancements.html
+++ b/enhancements.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enhancements - CloudLabs</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta name="description" content="Website enhancements" />
   </head>
   <body>
-    <h1>Enhancements...</h1>
+    <h1>Enhancements</h1>
+    <h2><a href="apply.html">CSS Heading Typing Animation</a></h2>
+    <p>This enhancement uses advanced CSS such as keyframes and animations.</p>
+    <p>The animation is done by placing the page heading into a container, then gradually increasing the width of the container to make it look like the text is being typed out. For the blinking cursor animation, the right border of the container alternates between solid black and transparent.</p>
+    <p>Due to each heading having different lengths, the CSS must be adapted individually to fit each heading. 
+      <p>The animation is done using only HTML and CSS, and the keyframes and animations go beyond what was taught in the lectures. Overall, the aim of this enhancement was to make the website more dynamic and enjoyable to use, therefore increasing the quality of the website and making it more engaging to users.</p>
+    <strong>References:</strong>
+    <p>Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023, https://codepen.io/denic/pen/GRoOxbM.</p>
+    <p>Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your Website — SitePoint’, www.sitepoint.com, viewed 31 March 2023, https://www.sitepoint.com/css-typewriter-effect.</p>
   </body>
 </html>
